# informatics_laboratories_8_0

./: README.md  pyproject.toml
basics/: hello_world.py  my_group.py
