[tool.poetry]
name = "basics"
version = "0.1.0"
description = ""
authors = ["Danil Sidoruk <danilsidoruknv@yandex.ru>"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.scripts]
hello_world = "basics.hello_world:main"
my_group = "basics.my_group:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
